<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shelf"
    tools:context=".signUp">

    <ImageView
        android:layout_width="79dp"
        android:layout_height="85dp"
        android:layout_above="@+id/signUpForm"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:src="@drawable/logo" />
    <LinearLayout
        android:id="@+id/signUpForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_centerInParent="true">

        <EditText
            android:id="@+id/edtSignUpName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:textColorHint="@color/white"
            android:textSize="21sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:backgroundTint="@color/white"
            android:inputType="textEmailAddress">
        </EditText>

        <EditText
            android:id="@+id/edtSignUpEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textColorHint="@color/white"
            android:textSize="21sp"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:textColor="@color/white"
            android:backgroundTint="@color/white"
            android:inputType="textEmailAddress">
        </EditText>

        <EditText
            android:id="@+id/edtSignUpPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            android:textColorHighlight="@color/white"
            android:hint="@string/password"
            android:textSize="21sp"
            android:layout_marginTop="8dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:backgroundTint="@color/white"
            android:inputType="textPassword"
            >
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/password_constraint"
            android:textSize="12sp">

        </TextView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/gotosignin"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/goToSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:selectableItemBackground"
                android:text="@string/underlinedSignIn"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="italic|bold" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/blue_light"
        android:elevation="8dp"
        android:minHeight="48dp"
        android:padding="10dp"
        android:shadowColor="@color/black"
        android:text="@string/signUp"
        android:textColor="@color/white"
        app:cornerRadius="4dp" />

</RelativeLayout>