<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".readingListUpdate">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="270dp"
                android:background="@color/blue_light"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/backArrow"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="20dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="20dp"
                        android:background="?android:selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"
                        android:src="@drawable/ic_baseline_arrow_back_24_white" />

                </RelativeLayout>


                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/readinglist" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:text="@string/updateBookDetails"
                    android:textColor="@color/white"
                    android:textSize="21sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="@string/bookTitle"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/edtTitleUpdate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:minHeight="48dp"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:padding="2dp"
                    android:text="@string/author"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/edtAuthorUpdate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:minHeight="48dp"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:padding="2dp"
                    android:text="@string/genre"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:rowCount="3"
                    android:columnCount="2"
                    android:alignmentMode="alignMargins"
                    android:columnOrderPreserved="false"
                    android:useDefaultMargins="true">

                    <CheckBox
                        android:id="@+id/cbFantasyUpdate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fantasy" />

                    <CheckBox
                        android:id="@+id/cbRomanceUpdate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/romance"/>

                    <CheckBox
                        android:id="@+id/cbSciFiUpdate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sciencefiction" />

                    <CheckBox
                        android:id="@+id/cbHorrorUpdate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/horror"/>

                    <CheckBox
                        android:id="@+id/cbMysteryUpdate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mystery" />

                    <CheckBox
                        android:id="@+id/cbNonFiUpdate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nonfiction"/>

                </GridLayout>


            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/rluSavebtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="end|bottom"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/ic_baseline_save_24" />


</RelativeLayout>