<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shelf"
    tools:context=".signIn">

    <ImageView
        android:layout_width="79dp"
        android:layout_height="85dp"
        android:layout_above="@+id/signInForm"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:src="@drawable/logo" />

    <LinearLayout
        android:id="@+id/signInForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:orientation="vertical">


        <EditText
            android:id="@+id/edtSignInEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="21sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/edtSignInPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/white"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="21sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/gotosignup"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/goToSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:selectableItemBackground"
                android:text="@string/underlinedSignUp"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="italic|bold" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_alignParentBottom="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:elevation="8dp"
        android:minHeight="48dp"
        android:padding="10dp"
        android:shadowColor="@color/black"
        android:text="@string/signIn"
        android:textColor="@color/white"
        app:cornerRadius="4dp" />

</RelativeLayout>